--- a/style.css
+++ b/style.css
@@ -70,20 +70,27 @@ input {
     font-size: 16px;
     color: #333333;
     border-radius: 4px;
-    width: 300;
+    width: 100%;
     height:40px;
     border:none;
+    color: #333333;
+    font-family: 'Roboto', sans-serif;
   }
 
-  input[name="request"] {
-     height:100px;
-     resize: none;
-     box-sizing: border-box;
+  textarea {
+      width:100%;
+      background-color: rgb(233,221,221);
+      border:none;
+      border-radius: 4px;
+      font-size: 16px;
+      color: #333333;
+      font-family: 'Roboto', sans-serif;
+      padding:8px;
   }
 
   button {
     position: relative;
-    top:2px;
+    top:5px;
     left:300px;
     font-size: 14px;
     font-weight: 700;
@@ -163,7 +170,7 @@ input {
     
       button {
         position: relative;
-        top:0;
+        top:10;
         left:0;
         font-size: 16px;
         font-weight: 700;
